- Fixed a bug where an Abilities Source name was being reset to an empty field with Source="Other", after using the sheet's recalc button. - Fixed roll template header collapsing in FF browser.

--- a/Pathfinder Community/dev/src/pathfinder.css
+++ b/Pathfinder Community/dev/src/pathfinder.css
@@ -431,8 +431,10 @@
 }
 
 /* keeps textarea and readonly number attribute to right inline with each other in one .table cell */
-.charsheet .small-label2.linked-tablecell,
-.charsheet .table-cell.linked-tablecell {
+.charsheet .small-label2.linked-tablecell, .charsheet .table-cell.linked-tablecell {
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     min-width: 8em;
     white-space: nowrap;
 }
